Some align fixes... and more

--- a/css/purecss/side-menu-hub.css
+++ b/css/purecss/side-menu-hub.css
@@ -66,7 +66,7 @@ The content `<div>` is where all your content goes.
     }
 
 .content-subhead {
-    margin: 50px 0 30px 0;
+    margin: 25px 0 10px 0;
     font-weight: 600;
     color: #888;
 }
